--- a/test_commentservice.tavern.yaml
+++ b/test_commentservice.tavern.yaml
@@ -5,10 +5,10 @@ test_name: Try to add a comment to an article that doesn’t exist
 stages:
   - name: make sure it should give not allow you to add comment
     request:
-      url: http://127.0.0.1:5000/articles/5/addcomment
+      url: http://127.0.0.1:5100/articles/99999/addcomment
       auth:
-        - karan@gmail.com
-        - abc
+        - shrutitaware@gmail.com
+        - shruti1
       json:
         comment_content: this is 1st article comment
       method: POST
@@ -26,12 +26,12 @@ test_name: Post an anonymous comment on an article
 stages:
   - name: Make sure author of that comment is anonymous coward
     request:
-      url: http://127.0.0.1:5000/articles/1/addcomment
+      url: http://127.0.0.1:5100/articles/1/addcomment
       auth:
-        - shailu@gmail.com
-        - def
+        - shrutitaware@gmail.com
+        - wrongpassword
       json:
-        comment_content: this is my comment
+        comment_content: this is my anonymous comment
       method: POST
       headers:
         content-type: application/json
@@ -45,10 +45,10 @@ test_name: Post an authenticated comment on an article
 stages:
   - name: Make sure author of the comment is user email
     request:
-      url: http://127.0.0.1:5000/articles/1/addcomment
+      url: http://127.0.0.1:5100/articles/1/addcomment
       auth:
-        - shailavi@gmail.com
-        - def
+        - shrutitaware@gmail.com
+        - shruti1
       json:
         comment_content: this is new comment
       method: POST
@@ -64,7 +64,7 @@ test_name: Check that the comments on the article were returned in order
 stages:
   - name: Make sure comments are displayed in reverse chronological order
     request:
-      url: http://127.0.0.1:5000/articles/1/comments/recentcomments?recent=1
+      url: http://127.0.0.1:5100/articles/1/comments/recentcomments?recent=1
       method: GET
       headers:
         content-type: application/json
